adds html/js/DOM manipulation demo

--- a/demos/HtmlCssJsdemo/cssstuff/stylesbymark.css
+++ b/demos/HtmlCssJsdemo/cssstuff/stylesbymark.css
@@ -118,5 +118,8 @@ h1>span {
   margin: auto;
   text-align: right;
   /* text align is fo the content itself NOT the element */
-  justi
+}
+
+.redBackground {
+  background-color: red;
 }
