add the Entity Framework API demo

--- a/demos/AngularAPIDemo/DemoSPA/src/app/request-test/request-test.component.html
+++ b/demos/AngularAPIDemo/DemoSPA/src/app/request-test/request-test.component.html
@@ -1,6 +1,12 @@
 <p>request-test works!</p>
 
 <button (click)="displayTime()">Display Time</button>
-<button (click)="resetTime()">Reset Time</button>
+<button (click)="displayTodos()">Display Todos</button>
 
 <h3 *ngIf="currentTime != null"> {{ currentTime }} </h3>
+
+
+
+<ul>
+    <li *ngFor="let todo of todos"> {{ todo.id }}: {{ todo.title }}</li>
+</ul>
